# ChangeLog for dev-ruby/bluecloth
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bluecloth/ChangeLog,v 1.23 2009/11/25 09:46:24 maekke Exp $

  25 Nov 2009; Markus Meier <maekke@gentoo.org> bluecloth-2.0.5.ebuild:
  amd64 stable, bug #283020

  19 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  bluecloth-2.0.5.ebuild:
  stable x86, bug 283020

  08 Nov 2009; nixnut <nixnut@gentoo.org> bluecloth-2.0.5.ebuild:
  ppc stable #283020

  04 Nov 2009; Hans de Graaff <graaff@gentoo.org> -bluecloth-2.0.4.ebuild:
  Remove old version.

  26 Jul 2009; Hans de Graaff <graaff@gentoo.org> -bluecloth-2.0.0.ebuild,
  -bluecloth-2.0.2.ebuild, -bluecloth-2.0.3.ebuild:
  Remove old versions.

*bluecloth-2.0.5 (26 Jul 2009)

  26 Jul 2009; Hans de Graaff <graaff@gentoo.org> +bluecloth-2.0.5.ebuild:
  Version bump with minor bug fixes.

*bluecloth-2.0.4 (13 Jul 2009)

  13 Jul 2009; Hans de Graaff <graaff@gentoo.org> +bluecloth-2.0.4.ebuild:
  Version bump.

*bluecloth-2.0.3 (24 Jun 2009)

  24 Jun 2009; Hans de Graaff <graaff@gentoo.org> +bluecloth-2.0.3.ebuild:
  Version bump

*bluecloth-2.0.2 (27 May 2009)

  27 May 2009; Hans de Graaff <graaff@gentoo.org> +bluecloth-2.0.2.ebuild:
  Version bump.

*bluecloth-2.0.0 (14 Apr 2009)

  14 Apr 2009; Alex Legler <a3li@gentoo.org> +bluecloth-2.0.0.ebuild:
  Version bump, seems Ruby 1.9 compatible.

  03 Nov 2008; Diego Pettenò <flameeyes@gentoo.org> bluecloth-1.0.0.ebuild:
  Remove outdated postinst message.

  17 Sep 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing citizen428 from metadata.xml (see #56803 for reference).

  20 Jun 2007; Markus Rothe <corsair@gentoo.org> bluecloth-1.0.0.ebuild:
  Stable on ppc64; bug #182537

  20 Jun 2007; Christoph Mende <angelos@gentoo.org> bluecloth-1.0.0.ebuild:
  Stable on amd64 wrt bug 182537

  04 Mar 2007; Tom Gall <tgall@gentoo.org> bluecloth-1.0.0.ebuild:
  added ~ppc64
