@@ -1,6 +1,6 @@
 DIST BlueCloth-1.0.0.gem 66199 RMD160 f82f483dd9866f9db4278aa19c3d1385bbaaa16f SHA1 f773ef67c2638afb1e4125cf56871eab87f463ed SHA256 40d34cc8c87654fdf10da4a23d31f2c7e4855175a5f8625f8229f3c842d85486
 DIST bluecloth-2.0.5.gem 119296 RMD160 609ee04dd2e307928890f5aea977bc091fadfa1d SHA1 d855b2cc86d448577965a8963b914a2077974dc4 SHA256 d51e8736e454057d63e979c79e1907cf5bf8826dd0853043f67cf5f7d02d7801
-EBUILD bluecloth-1.0.0.ebuild 597 RMD160 8f11feeb453e9849a3a5e4f308fea807e34216a9 SHA1 96bc88bbcc9d1c65221c942babce6e6962883904 SHA256 6215b5707d4e07d256b4b54507598cd38555073ddfec30faa9843dd4e78ea828
+EBUILD bluecloth-1.0.0.ebuild 579 RMD160 e4cc64b9a26896dfce680fef547fe7b7302efb88 SHA1 58a73d64d483a0531f80347e498769961cc98e38 SHA256 ce90cb77463ce63659973f81f4fbd32fcdb825335abc49e65389d3a990070eaa
 EBUILD bluecloth-2.0.5.ebuild 524 RMD160 72051b59f8f854f8b9c3df879802d2f4baa4de9d SHA1 8fe2ebc487855f94761b42f16771c02ddf4eea22 SHA256 eb24bb8a610762abb0b4dbd38185cc9349f2503e70ce45e0975ce103b21034a7
-MISC ChangeLog 2896 RMD160 a5496b557c46d054945efb7f1c331f73817c9933 SHA1 ebca583022d762f99309ecc1e022263dcbd22915 SHA256 9dddef62d95dc7dd7872bedb26e97b9b98e3ee19e7ce677018a89f983bc2ae09
+MISC ChangeLog 2978 RMD160 e912126d2e0d4bab1f9d0ba4aefcdb4584d198e5 SHA1 0f822c3f9ced8f7612c13cf64d49c424a0217116 SHA256 c01364665f814f9753de60fa68169d9e335cba9a520379c5d531aa259a0677a2
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
