@@ -1,13 +1,13 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bluecloth/bluecloth-1.0.0.ebuild,v 1.12 2008/11/03 00:41:01 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bluecloth/bluecloth-1.0.0.ebuild,v 1.13 2009/11/29 14:33:44 a3li Exp $
 
 inherit ruby gems
 
 MY_P="BlueCloth-${PV}"
 DESCRIPTION="A Ruby implementation of Markdown"
 HOMEPAGE="http://www.deveiate.org/projects/BlueCloth"
-SRC_URI="http://www.deveiate.org/code/${MY_P}.gem"
+SRC_URI="mirror://gentoo/${MY_P}.gem"
 
 LICENSE="GPL-2"
 SLOT="0"
